@@ -870,6 +870,12 @@ libspectrum_tape_peek_next_block( libspectrum_tape *tape )
 Get the next block on the tape, but don't move the tape along or
 initialise the block.
 
+libspectrum_tape_block WIN32_DLL *
+libspectrum_tape_peek_last_block( libspectrum_tape *tape )
+
+Get the last block on the tape, but don't move the tape along or
+initialise the block.
+
 libspectrum_tape_block*
 libspectrum_tape_select_next_block( libspectrum_tape *tape )
 
