@@ -161,6 +161,10 @@ int main(void)
 "GSList WIN32_DLL *g_slist_remove		(GSList		*list,\n"
 "						 gpointer	 data);\n"
 "\n"
+"GSList WIN32_DLL *g_slist_last			(GSList		*list);\n"
+"\n"
+"GSList WIN32_DLL *g_slist_reverse		(GSList		*list);\n"
+"\n"
 "GSList WIN32_DLL *g_slist_delete_link		(GSList		*list,\n"
 "				 		 GSList		*link);\n"
 "\n"
@@ -175,7 +179,7 @@ int main(void)
 "GSList WIN32_DLL *g_slist_nth		(GSList		*list,\n"
 "					 guint		n);\n"
 "\n"
-"GSList WIN32_DLL * g_slist_find_custom	(GSList		*list,\n"
+"GSList WIN32_DLL *g_slist_find_custom	(GSList		*list,\n"
 "					 gpointer	data,\n"
 "					 GCompareFunc	func );\n"
 "\n"
