@@ -729,3 +729,6 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          interfaces (feature request #1841501) (Fred).
 20090611 sna.c: note info loss of Fuller or Melodik info when writing sna
          format snapshots (Fred).
+20090627 doc/libspectrum.txt,libspectrum.h.in,make-perl.c,myglib/gslist.c,
+         tape.c,tzx_write.c,warajevo_read.c: fix loading Warajevo TAPs of raw
+         samples (e.g. BRUCELEE.TAP) (Fred).
